# srcport-substrate

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SPEC.md  buf.yaml
.github/workflows/: ci.yml
contracts/proto/srcport/substrate/v1/: substrate.proto
docs/: Artifact.md  Concurrency.md  Framework.md  Module.md
example/: Cargo.toml  README.md
example/src/: html.rs  main.rs
framework/: README.md  SPEC.md
framework/profiles/ui/: README.md  processing_view.schema.json  result_view.schema.json  step_final.schema.json  step_init.schema.json  step_progress.schema.json
framework/rust/: Cargo.toml  README.md
framework/rust/src/: lib.rs  policy.rs  presentation.rs
framework/rust/tests/: host_drive.rs  lifecycle.rs  modes.rs  storage.rs
framework/sdk/go/: README.md  cut.go  cut_test.go  errors.go  go.mod  host.go  host_drive_test.go  memo.go  plugin.go  policy.go  presentation.go  storage.go
framework/sdk/python/: README.md  pyproject.toml
framework/sdk/python/src/srcport_framework/: __init__.py  cut.py  errors.py  host.py  memo.py  plugin.py  policy.py  presentation.py  storage.py
framework/sdk/python/tests/: test_cut.py  test_host_drive.py
framework/sdk/rust/: Cargo.toml  README.md
framework/sdk/rust/src/: cut.rs  lib.rs  memo.rs  policy.rs  storage.rs
framework/sdk/rust/tests/: host_drive.rs  lifecycle.rs  memo.rs  modes.rs  storage.rs
kernel/: README.md  SPEC.md  buf.gen.yaml  buf.yaml
kernel/contracts/proto/srcport/substrate/v1/: substrate.proto
kernel/example/: Cargo.toml  README.md
kernel/example/src/: main.rs  reconstruct.rs
kernel/scripts/: gen.sh
kernel/sdk/go/: README.md  conformance_test.go  go.mod  kernel.go  substrate.go
kernel/sdk/go/internal/genpb/srcport/substrate/v1/: substrate.pb.go
kernel/sdk/python/: README.md  pyproject.toml
kernel/sdk/python/src/srcport_substrate/: __init__.py  _kernel.py  _types.py
kernel/sdk/python/src/srcport_substrate/_gen/srcport/substrate/v1/: substrate_pb2.py  substrate_pb2.pyi
kernel/sdk/python/tests/: test_conformance.py
kernel/sdk/rust/: Cargo.toml  README.md  build.rs
kernel/sdk/rust/src/: lib.rs
kernel/sdk/rust/tests/: conformance.rs
sdk/go/: README.md  conformance_test.go  go.mod  kernel.go  substrate.go
sdk/go/internal/genpb/srcport/substrate/v1/: substrate.pb.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/srcport_substrate/: __init__.py  _kernel.py  _types.py
sdk/python/src/srcport_substrate/_gen/srcport/substrate/v1/: substrate_pb2.py  substrate_pb2.pyi
sdk/python/tests/: test_conformance.py
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/src/: lib.rs
sdk/rust/tests/: conformance.rs
