[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "srcport-substrate"
version = "0.1.0"
description = "In-process Python SDK for the srcport-substrate microkernel: seven primitives and one Kernel ABI, conformant to SPEC.md (v0.1)."
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-srcport-all-rights-reserved"
authors = [{ name = "srcport.com" }]

# Zero runtime dependencies — the SDK is stdlib-only.
dependencies = []

[project.urls]
Repository = "https://github.com/philcantcode/srcport-substrate"

[tool.setuptools.packages.find]
where = ["src"]
