[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "srcport-substrate"
version = "0.1.0"
description = "In-process Python SDK for the srcport-substrate microkernel: eight primitives and one Kernel ABI, conformant to SPEC.md (v0.1)."
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-srcport-all-rights-reserved"
authors = [{ name = "srcport.com" }]

# The one runtime dependency: the protobuf runtime for the generated messages.
# Must be >= the gencode version pinned in buf.gen.yaml (protocolbuffers/python
# v29.3 ⇒ gencode 5.29.x). A newer runtime is fine; an older one is rejected.
dependencies = ["protobuf>=5.29,<7"]

[project.urls]
Repository = "https://github.com/philcantcode/srcport-substrate"

[tool.setuptools.packages.find]
where = ["src"]
