[package]
name = "srcport-substrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "LicenseRef-srcport-all-rights-reserved"
description = "In-process Rust SDK for the srcport-substrate microkernel: eight primitives and one Kernel ABI, conformant to SPEC.md (v0.1)."
repository = "https://github.com/philcantcode/srcport-substrate"
publish = false

# The generated protobuf types ARE the contract. `build.rs` compiles
# ../../contracts/proto/.../substrate.proto with protox (pure Rust — no protoc
# binary required) so this crate can never drift from substrate.proto.
[dependencies]
prost = "0.13"
sha2 = "0.10"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"
