[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "srcport-framework"
version = "2.2.0"
description = "Opinionated application framework on srcport-substrate: host loop, module plugins, optional UI profiles."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [{ name = "srcport.com" }]
dependencies = [
  "srcport-substrate>=2.0.0",
  "protobuf>=5.29,<7",
]

[project.urls]
Repository = "https://github.com/philcantcode/srcport-substrate"

[tool.setuptools.packages.find]
where = ["src"]
