[package]
name = "srcport-framework"
version = "2.3.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Opinionated application framework on srcport-substrate: host loop, module plugins, optional UI profiles."
repository = "https://github.com/philcantcode/srcport-substrate"
publish = false

[dependencies]
srcport-substrate = { path = "../../../kernel/sdk/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
