[package]
name = "srcport-substrate"
version = "1.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "In-process Rust SDK for the srcport-substrate microkernel: seven primitives and one KernelApi, conformant to SPEC.md (v1.1)."
repository = "https://github.com/philcantcode/srcport-substrate"

# The generated protobuf types ARE the contract. `build.rs` compiles
# kernel/contracts/proto/.../substrate.proto with protox (pure Rust — no protoc
# binary required) so this crate can never drift from substrate.proto.
[dependencies]
prost = "0.13"
sha2 = "0.10"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"
